<resources>
    <string name="app_name">Tripster</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_reservations">Reservations</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_account">Account</string>
    <string name="title_accommodations">Accommodations</string>
    <string name="title_reviews">Reviews</string>
    <string name="title_users">Users</string>
    <string name="title_search">Search</string>
    <string name="title_filter">Filter</string>
    <string name="title_settings">Settings</string>
    <string name="title_accommodation_form">Add unit</string>
    <string name="title_logout">Log out</string>

    <string name="log_in">Log in</string>
    <string name="register">New user? <b>Register</b></string>
    <string name="back_to_login">Already have an account? <b>Login</b></string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="repeat_password">Repeat password</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phone_number">Phone number</string>
    <string name="email">E-mail</string>
    <string name="sign_up">Sign up</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="street">Street </string>
    <string name="street_number">Street number</string>
    <string name="postal_code">Postal code</string>
    <string name="change_password">Change <b>password?</b></string>
    <string name="personal_info">Personal</string>
    <string name="edit">Edit</string>
    <string name="security">Security</string>
    <string name="address">Address</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="repeat_new_password">Repeat new password</string>
    <string name="update_account">Update account</string>
    <string name="delete_account">Delete account</string>
    <string name="decline">Decline</string>
    <string name="reject">Reject</string>
    <string name="Accept">Accept</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="dialog_message" />

    <string name="accommodation_form_title">Hello Rade, let`s register your new accommodation!</string>
    <string name="accommodation_form_title_update">Hello Rade, let`s update your new accommodation!</string>
    <string name="accommodation_form_sub_title_main">We`ll start with some base info.</string>
    <string name="accommodation_form_sub_title_address">Let`s now move on to address info!</string>
    <string name="accommodation_form_sub_title_description">Put as much details as possible</string>
    <string name="accommodation_form_sub_title_additional">Provide as much as you can!</string>
    <string name="accommodation_form_sub_title_price">How would you like to price a stay.</string>
    <string name="accommodation_form_sub_title_policy">Finally tell us what is your free cancellation period policy.</string>

    <string name="accommodation_form_label_name">Something unique and authentic</string>
    <string name="accommodation_form_label_short_desc">Make it short and memorable</string>
    <string name="accommodation_form_label_num_of_guests">Make it as flexible as possible</string>
    <string name="accommodation_form_label_name_desc">Describe it to the fullest of details</string>

    <string name="accommodation_form_hint_name">Accommodation name</string>
    <string name="accommodation_form_hint_short_desc">Short description</string>
    <string name="accommodation_form_hint_min_cap">Minimal capacity</string>
    <string name="accommodation_form_hint_max_cap">Maximal capacity</string>
    <string name="accommodation_form_hint_country">Country</string>
    <string name="accommodation_form_hint_city">City</string>
    <string name="accommodation_form_hint_zip_code">Zip code</string>
    <string name="accommodation_form_hint_street">Street</string>
    <string name="accommodation_form_hint_number">Number</string>
    <string name="accommodation_form_hint_description">Description</string>

    <string name="go_to_photos">Go to photos</string>
    <string name="go_to_price_lists">Go to price lists</string>
    <string name="open_calendar">Open calendar</string>

    <string name="accommodation_form_button_register">Register accommodation</string>
    <string name="accommodation_form_button_update">Update accommodation</string>
    <string name="accommodation_form_button_delete">Delete accommodation</string>

    <string name="accommodation_form_availability_title">Accommodation availability and prices.</string>
    <string name="accommodation_form_sub_title_availability_label">Selected date range:</string>
    <string name="accommodation_form_availability_hint_price">Price</string>
    <string name="accommodation_form_availability_button_add">Add price list</string>
    <string name="accommodation_form_availability_button_update">Update price list</string>
    <string name="accommodation_form_availability_button_disable">Disable interval</string>

    <string name="add_new_review">Write a review</string>
    <string name="review_form_title"> Write a review </string>
    <string name="review_form_title_hint"> Title </string>
    <string name="review_form_comment_hint"> Comment </string>
    <string name="review_form_button_hint"> Send </string>

    <string name="report_form_title_user"> Report user </string>
    <string name="report_form_title_review"> Report review </string>
    <string name="report_form_reason_hint"> Reason </string>


    <string name="settings_title"> Settings </string>
    <string name="settings_reservation_notifications"> Reservation notifications </string>
    <string name="settings_review_notifications"> Review notifications </string>
    <string name="settings_accommodation_review_notifications"> Accommodation review notifications </string>
    <string name="settings_apply"> Apply </string>



    <string-array name="type_options">
        <item>Pick the type of your unit</item>
        <item>Apartment</item>
        <item>Studio</item>
        <item>Room</item>
    </string-array>

    <string-array name="reservation_policy_options">
        <item>Pick the reservation approval policy</item>
        <item>Automatic approval (advised)</item>
        <item>Manual approval</item>
    </string-array>

    <string-array name="pricing_policy_options">
        <item>Pick the pricing policy</item>
        <item>Per night (advised)</item>
        <item>Per guest per night</item>
    </string-array>

    <string-array name="cancellation_policy_options">
        <item>Pick the cancellation policy</item>
        <item>3 days before</item>
        <item>7 days before</item>
        <item>14 days before</item>
        <item>1 month before</item>
        <item>None</item>
    </string-array>

    <string-array name="cancellation_policy_values">
        <item>null</item>
        <item>3</item>
        <item>7</item>
        <item>14</item>
        <item>30</item>
        <item>null</item>
    </string-array>

    <string-array name="availability_mode_options">
        <item>Pick the action</item>
        <item>Create new price list</item>
        <item>Disable an interval</item>
    </string-array>

    <string-array name="rate_names">
        <item>Bad</item>
        <item>Poor</item>
        <item>Average</item>
        <item>Good</item>
        <item>Excellent</item>
    </string-array>

    <string-array name="review_types">
        <item>Accommodation reviews</item>
        <item>Host reviews</item>
    </string-array>

    <string-array name="review_reports">
        <item>New accommodation reviews</item>
        <item>Accommodation review reports</item>
        <item>User review reports</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reporter">Reporter:</string>
    <string name="reported">Reported:</string>
    <string name="report_reason">Reason for report:</string>
    <string name="delete">Delete</string>
    <string name="approve">Approve</string>
    <string name="comment">Comment:</string>
    <string name="add_photo">Select photos</string>
    <string name="upload_photo">Upload photos</string>

    <!--    veljko  -->


    <!--    rade  -->


    <!--    trajce  -->


</resources>