<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <EditText
        android:id="@+id/name"
        style="@style/EditTextStyle"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:background="@drawable/login_button"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/surname"
        style="@style/EditTextStyle"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:background="@drawable/login_button"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        android:layout_marginTop="20dp"/>


    <Button
        android:id="@+id/btnLogin"
        style="@style/ButtonTextStyle"
        android:layout_width="129dp"
        android:layout_height="35dp"
        android:background="@drawable/login_button"
        android:text="@string/log_in"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surname" />

    <Button
        android:id="@+id/btnRegister"
        style="@style/ButtonTextStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/secondary_button"
        android:text="@string/register"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>