<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/layout_background"
    >

    <TextView
        android:id="@+id/review_form_title"
        style="@style/TitleText"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/review_form_title"
        android:layout_marginTop="20dp"
        android:textColor="?attr/colorOnPrimary"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/title_input"
        style="@style/EditTextStyle"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@drawable/login_button"
        android:ems="10"
        android:hint="@string/review_form_title_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/review_form_title" />

    <RatingBar
        android:id="@+id/rate_input"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:stepSize="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_input"/>

    <EditText
        android:id="@+id/comment_input"
        style="@style/EditTextStyle"
        android:layout_width="320dp"
        android:layout_height="96dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/login_button"
        android:ems="10"
        android:hint="@string/review_form_comment_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rate_input" />

    <Button
        android:id="@+id/add_review"
        style="@style/ButtonTextStyle"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/login_button"
        android:text="@string/review_form_button_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/comment_input" />


</androidx.constraintlayout.widget.ConstraintLayout>